# prop_mgmt_backend

./: README.md  create_tables.sql  main.py  populate_db.sql  pyproject.toml
